# call-center-voice-agent-accelerator

./: .gitignore  COSMOS_DB_MIGRATION.md
infra/: main.bicep
infra/modules/: acs.bicep  aiservices.bicep  containerapp.bicep  cosmosdb.bicep  keyvault.bicep  roleassignments.bicep
server/: order_status_template.html  pyproject.toml  requirements.txt  server.py
server/app/: cosmos_client.py
server/app/functions/: __init__.py  analytics.py  order_functions.py  telehealth_functions.py
server/app/handler/: acs_media_handler.py
server/static/: index.html
